# inventory-sales-system

./: .dockerignore  .gitignore  CART_TROUBLESHOOT.md  COMPLETE_SOLUTION.md  DELIVERABLES.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  ECOMMERCE_IMPLEMENTATION.md  FIXES_APPLIED.md  FRONTEND_EXAMPLE_IMPLEMENTATIONS.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_REBUILD.md  IMPLEMENTATION_ROADMAP.md  INVENTORY_DEDUCTION_VERIFICATION.md  LOGIN_FIX.md  LOGIN_FIXED.md  MULTI_INDUSTRY_ARCHITECTURE.md  MULTI_INDUSTRY_CHECKLIST.md  MULTI_INDUSTRY_DESIGN.md  MULTI_INDUSTRY_IMPLEMENTATION.md  MULTI_INDUSTRY_QUICK_REFERENCE.md  MULTI_INDUSTRY_SYSTEM_SUMMARY.md  NGINX_FIX.md  PHARMACY_BACKEND_IMPLEMENTATION.md  POS_REDESIGN.md  PROJECT_STATUS_AND_NEXT_STEPS.md  README.md  SETUP_COMPLETE.md  UI_IMPROVEMENTS.md  USER_GUIDE.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  index.html  login_test.json  package.json  setup.sh  tailwind.config.js  test_login.sh  vite.config.js
server/: Cargo.toml
server/examples/: gen_hash.rs
server/src/: auth_guard.rs  db.rs  main.rs  migration_v7.rs
server/src/routes/: auth.rs  customers.rs  ecommerce.rs  industries.rs  inventory.rs  invoices.rs  mod.rs  pharmacy.rs  reports.rs  sales.rs  settings.rs  suppliers.rs  users.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: auth.rs  customers.rs  inventory.rs  invoices.rs  mod.rs  reports.rs  sales.rs  settings.rs  suppliers.rs  users.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: customer.rs  invoice.rs  mod.rs  product.rs  report.rs  (+3 more)
(+65 files in other folders)
