[package]
name = "lumisync-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lumisync-server"
path = "src/main.rs"

[dependencies]
axum            = { version = "0.7", features = ["json", "macros"] }
tokio           = { version = "1",   features = ["full"] }
tower-http      = { version = "0.5", features = ["cors", "trace"] }
rusqlite        = { version = "0.31", features = ["bundled"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
bcrypt          = "0.15"
uuid            = { version = "1",   features = ["v4"] }
chrono          = { version = "0.4", features = ["serde"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
