[package]
name = "lumisync"
version = "1.0.0"
description = "LumiSync Inventory & Sales System"
authors = ["LumiSync"]
edition = "2021"

[[bin]]
name = "lumisync"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
